--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <br>
                 <h4><i class="fa-regular fa-address-book"></i> Datos Personales</h4>
                 <ul class="contacto">
-                    <li>Nombre: Matias Ignacio Baeza Macias</li>
+                    <li>Nombre: Matias Ignaci Baeza Macias</li>
                     <li>Correo electrónico: mati.baeza65@gmail.com</li>
                     <li>Número de contacto: +56953171668</li>
                 </ul>
