--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg p-3 navbar-dark" style="background-color: beige">
         <div class="container-fluid">
-            <a class="navbar-brand text-black" href="#">Curriculum Vitae</a>
+            <a class="navbar-brand text-black" href="#">Curriculum Vitae MATIAS BAEZA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
